--- a/_include/header.html
+++ b/_include/header.html
@@ -22,10 +22,10 @@
   </head>
   <body>
     <header class="p-header l-header" id="header-link">
-      <div class="p-header__inner">
+      <div class="p-header__inner inner">
         <h1 class="p-header__logo">
           <a href="#">
-            <img src="/assets/img/common/logo.svg" alt="LOGO">
+            <img src="/assets/img/common/logo.svg" alt="いこいの里｜採用">
           </a>
         </h1>
         <nav class="p-header__nav">
@@ -58,6 +58,11 @@
           <span></span>
         </button>
         <div class="p-header__drawer js-drawer">
+          <h1 class="p-header__drawe-logo">
+            <a href="#">
+              <img src="/assets/img/common/logo.svg" alt="いこいの里｜採用">
+            </a>
+          </h1>
           <nav class="p-header__drawer-nav">
             <ul class="p-header__drawer-list">
               <li class="p-header__drawer-item">
