--- a/src/sass/project/_p-process.scss
+++ b/src/sass/project/_p-process.scss
@@ -32,3 +32,11 @@
 .p-process__wrap {
 
 }
+
+.js-processImg{
+  max-width:  rem(300);
+  margin: 0 auto;
+  @include mq(md){
+    max-width: 100%;
+  }
+}
