--- a/_include/footer.html
+++ b/_include/footer.html
@@ -3,6 +3,7 @@
 </footer>
 <!-- JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="/assets/js/fadeUp.js"></script>
 <script src="/assets/js/script.js"></script>
 <script src="/assets/js/main.js"></script>
 </body>
