--- a/src/sass/foundation/_base.scss
+++ b/src/sass/foundation/_base.scss
@@ -132,11 +132,12 @@ $color-orange: #ff9648;
     position: absolute;
     z-index: -1;
     bottom: 30%;
-    left: -5%;
+    left: 0;
     color: $color-blue;
     font-size: clamp(rem(45), 10vw, rem(90));
     // width: 100vw;
     @include mq(md) {
+      left: -5%;
       bottom: -25%;
     }
   }
