--- a/src/sass/project/_p-anckerLink.scss
+++ b/src/sass/project/_p-anckerLink.scss
@@ -44,7 +44,7 @@
   &::before{
     content: "";
     position: absolute;
-    background-image: url("../../../assets/img/icon/icon_mokuzi.svg");
+    background-image: url("../../assets/img/icon/icon_mokuzi.svg");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -105,7 +105,7 @@
   &::before{
     content: "";
     position: absolute;
-    background-image: url("../../../assets/img/icon/icon_maruarrow.svg");
+    background-image: url("../../assets/img/icon/icon_maruarrow.svg");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
