--- a/src/sass/project/_p-work.scss
+++ b/src/sass/project/_p-work.scss
@@ -23,7 +23,6 @@
   }
 }
 
-
 .p-work__inner {
   // overflow: hidden;
 }
@@ -56,7 +55,7 @@
   position: relative;
   width: 100%;
   padding: rem(50) 0;
-  &::before{
+  &::before {
     content: "";
     position: absolute;
     top: 0;
@@ -70,7 +69,7 @@
       transparent 15%,
       $color-blue 25%
     );
-    @include mq(md){
+    @include mq(md) {
       display: none;
     }
   }
@@ -81,17 +80,18 @@
   @include mq(md) {
     display: flex;
     justify-content: space-between;
-  }
-  &:nth-of-type(even) {
-    flex-direction: row-reverse;
-    .p-work__text {
-      margin-right: rem(70);
-      margin-left: rem(0);
+
+    &:nth-of-type(even) {
+      flex-direction: row-reverse;
+      .p-work__text {
+        margin-right: rem(70);
+        margin-left: rem(0);
+      }
     }
   }
 
   &:not(:last-child) {
-    margin-bottom: rem(40);
+    margin-bottom: rem(70);
     @include mq(md) {
       margin-bottom: rem(50);
     }
@@ -154,27 +154,27 @@
 }
 
 .title1::before {
-  background-image: url("../../../assets/img/icon/number_1.png");
+  background-image: url("../../assets/img/icon/number_1.png");
 }
 
 .title2::before {
-  background-image: url("../../../assets/img/icon/number_2.png");
+  background-image: url("../../assets/img/icon/number_2.png");
 }
 
 .title3::before {
-  background-image: url("../../../assets/img/icon/number_3.png");
+  background-image: url("../../assets/img/icon/number_3.png");
 }
 
 .title4::before {
-  background-image: url("../../../assets/img/icon/number_4.png");
+  background-image: url("../../assets/img/icon/number_4.png");
 }
 
 .title5::before {
-  background-image: url("../../../assets/img/icon/number_5.png");
+  background-image: url("../../assets/img/icon/number_5.png");
 }
 
 .title6::before {
-  background-image: url("../../../assets/img/icon/number_6.png");
+  background-image: url("../../assets/img/icon/number_6.png");
 }
 
 .listMark-grid {
