--- a/src/sass/foundation/_base.scss
+++ b/src/sass/foundation/_base.scss
@@ -48,6 +48,7 @@ body {
   color: $color-black;
   // スムーススクロール
   scroll-behavior: smooth;
+  overflow-x:clip;
 }
 
 a {
@@ -106,7 +107,7 @@ $color-orange: #ff9648;
 ===================================*/
 .inner {
   max-width: rem(1080);
-  padding: 0 rem(15);
+  padding: 0 rem(35);
   width: 100%;
   margin: 0 auto;
   @include mq(md) {
@@ -137,7 +138,8 @@ $color-orange: #ff9648;
     font-size: clamp(rem(45), 10vw, rem(90));
     // width: 100vw;
     @include mq(md) {
-      left: -5%;
+      // left: -5%;
+      left: -20%;
       bottom: -25%;
     }
   }
@@ -248,6 +250,15 @@ $color-orange: #ff9648;
   &.faq-title {
     &::before {
       font-size: rem(80);
+      bottom: 0;
+      @include mq(md) {
+        font-size: rem(150);
+      }
+    }
+  }
+  &.company-title {
+    &::before {
+      font-size: rem(65);
       bottom: 0;
       @include mq(md) {
         font-size: rem(150);
