--- a/src/sass/project/_p-company.scss
+++ b/src/sass/project/_p-company.scss
@@ -7,10 +7,10 @@
 
 
 .p-company__inner {
-  margin: 0 auto;
-  @include mq(md){
-    max-width:  rem(690);
-  }
+  // margin: 0 auto;
+  // @include mq(md){
+  //   max-width:  rem(690);
+  // }
 }
 
 .inner {
